near-sdk/compilation_tests/impl_generic.stderr
error: Impl type parameters are not supported for smart contracts.
  --> compilation_tests/impl_generic.rs:10:20
   |
10 | struct Incrementer<T> {
   |                    ^

error: Impl type parameters are not supported for smart contracts.
  --> compilation_tests/impl_generic.rs:16:6
   |
16 | impl<'a, T: 'a + std::fmt::Display> Incrementer<T> {
   |      ^^
